--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "ra-data-fakerest": "^3.5.5",
+    "ra-data-json-server": "^3.6.1",
+    "ra-data-simple-rest": "^3.5.5",
+    "ra-input-rich-text": "^3.5.5",
     "react": "^16.13.1",
+    "react-admin": "^3.6.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "typescript": "~3.7.2"
